Extensions: Add style changes for warnings in md-extensions detail page

Style for corrupted, blacklisted, and suspicious warnings are missing
from the md-extensions details view page.

This CL adds the necessary style changes to support warnings in the
details view page, excluding style for the "Learn more" link associated
with suspicious warnings.

Bug: 760322
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I486ca6e3810e4ad7655e2f659e6d5514ca65ca3c
Reviewed-on: https://chromium-review.googlesource.com/695641
Commit-Queue: catmullings <catmullings@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Scott Chen <scottchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507788}
Former-commit-id: 5078a2973e873020ea8b35ce4e54cc4c10696207